--- a/pmd-eclipse-plugin/net.sourceforge.pmd.eclipse.plugin/build.properties
+++ b/pmd-eclipse-plugin/net.sourceforge.pmd.eclipse.plugin/build.properties
@@ -14,12 +14,11 @@ bin.includes = META-INF/,\
                toc.xml,\
                welcome.xml,\
                target/lib/,\
-               target/classes/
+               .
 src.includes = icons/,\
                META-INF/,\
                plugin.xml,\
                messages.properties,\
-               target/lib/,\
                nl/,\
                plugin.properties,\
                plugin_bg.properties,\
@@ -41,3 +40,4 @@ src.includes = icons/,\
                pom.xml
 source.. = src/main/java/,src/main/resources
 output.. = target/classes/
+jars.compile.order = .
